--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -33,6 +33,7 @@
       _paq.push(["setDomains", allDomains]);
     }
 
+    _paq.push(['requireCookieConsent']);
     _paq.push(["setCustomUrl", url]);
     _paq.push(["setDocumentTitle", title]);
     _paq.push(["trackPageView"]);
